now using all azs

--- a/spinn.conf
+++ b/spinn.conf
@@ -1,7 +1,6 @@
 ---
 
-region: "us-west-1"
-availability_zone: "us-west-1c"
+region: "us-east-1"
 history_length_days: 1
 plot_image_name: "plot1.png"
 instance_type: "c3.2xlarge"
