add a couple comments

--- a/spinn.conf
+++ b/spinn.conf
@@ -3,5 +3,5 @@
 region: "us-east-1"
 history_length_days: 1
 plot_image_name: "plot1.png"
-instance_type: "c3.2xlarge"
+instance_type: "m3.2xlarge"
 outliers_multiplier: 20
